[project]
name = "Python DSS Analysis"
dynamic = ["version"]
description = "Dynamical System Scaling Analysis Python Implementation"
readme = "README.md"
license = { text = "MIT" }  # SPDX short identifier
authors = [
  { name = "Grant Hendrickson", email = "granthendrickson19@gmail.com" },
]
requires-python = ">=3.9"

dependencies = [
    "scipy>=1.6.0",
    "numpy",  # compatible versions controlled through scipy
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pythondssanalysis/__init__.py"

dependencies = [
    numpy >= 2.0
]